--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <title>Hello from Electron renderer!</title>
   </head>
   <body>
-    <h1>Hello from Electron renderer!</h1>
-    <p></p>
-    <p id="info"></p>
+    <canvas id="myCanvas" width="800" height="600">
+      您的浏览器不支持 HTML5 canvas 标签。
+    </canvas>
   </body>
   <script src="./renderer.js"></script>
+  <script src="./json_parse.js"></script>
 </html>
