6 send write req to server

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       您的浏览器不支持 HTML5 canvas 标签。
     </canvas>
   </body>
+  <script src="./communicate.js"></script>
   <script src="./renderer.js"></script>
   <script src="./json_parse.js"></script>
+  
 </html>
