19 add lua.js read vm code

--- a/index.html
+++ b/index.html
@@ -21,4 +21,5 @@
   <script src="./communicate.js"></script>
   <script src="./renderer.js"></script>
   <script src="./sysCtl.js"></script>
+  <script src="./lua.js"></script>
 </html>
